--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "node server.js",
-    "heroku-postbuild": "webpack -p" 
+    "heroku-postbuild": "webpack -p"
   },
   "author": "",
   "license": "ISC",
@@ -22,5 +22,8 @@
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
