--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --open",
+    "dev": "webpack-dev-server --open",
     "build": "webpack",
-    "dev": "node server.js",
+    "start": "node server.js",
     "heroku-postbuild": "webpack -p" 
   },
   "author": "",
