--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "webpack-dev-server --open",
+    "build": "webpack",
     "dev": "node server.js",
     "heroku-postbuild": "webpack -p"
   },
