--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "node server.js",
+    "heroku-postbuild": "webpack -p",
     "start": "webpack-dev-server --open",
     "build": "webpack",
-    "dev": "node server.js",
-    "heroku-postbuild": "webpack -p"
   },
   "author": "",
   "license": "ISC",
