--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.12.0",
     "express": "^4.17.1"
   }
 }
